updated nev section

--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
         <!-- Navbar Start (Menu for large screen) -->
         <div class="navbar-start hidden lg:flex">
           <ul class="menu menu-horizontal px-1">
-            <li class="font-lato text-lg font-medium text-white">
+            <li class="font-lato text-base font-medium text-white">
               <a>Home</a>
             </li>
-            <li class="font-lato text-lg font-medium text-white">
+            <li class="font-lato text-base font-medium text-white">
               <a>About Us</a>
             </li>
-            <li class="font-lato text-lg font-medium text-white">
+            <li class="font-lato text-base font-medium text-white">
               <a>Shop</a>
             </li>
-            <li class="font-lato text-lg font-medium text-white">
+            <li class="font-lato text-base font-medium text-white">
               <a>All Fruits</a>
             </li>
           </ul>
