--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
       @theme {
         --primary-color: #f85559;
         --font-lato: "Lato", sans-serif;
+        --primary-hover: #1b9d9a;
       }
     </style>
   </head>
   <body>
     <header class="max-w-6xl mx-auto">
+      <!-- nav section -->
       <div
         class="navbar lg:bg-[var(--primary-color)] lg:rounded-full lg:px-6 lg:py-4 lg:mt-8 flex justify-between items-center"
       >
@@ -102,6 +104,119 @@
               <li><a>Shop</a></li>
               <li><a>All Fruits</a></li>
             </ul>
+          </div>
+        </div>
+      </div>
+      <!-- hero section -->
+      <div class="mt-14">
+        <div class="carousel w-full">
+          <!-- slide 1 -->
+          <div
+            id="slide1"
+            class="carousel-item relative w-full rounded-[8px] bg-[linear-gradient(180deg,#121212_-14.42%,rgba(18,18,18,0)_100%),url('/images/banner1.png')] h-[70vh] bg-cover bg-center bg-no-repeat"
+          >
+            <div
+              class="flex flex-col justify-center items-center gap-8 max-w-2xl mx-auto"
+            >
+              <h1 class="font-lato text-6xl font-bold text-white text-center">
+                Exotic tastes at your doorstep
+              </h1>
+              <p class="font-lato text-xl font-medium text-white text-center">
+                We supply highly quality organic products
+              </p>
+              <a
+                class="btn font-lato border-none text-xl font-extrabold text-white bg-[var(--primary-color)] hover:bg-[var(--primary-hover)] active:bg-[var(--primary-hover)] active:scale-95 active:opacity-90 transition-all duration-300 outline-none select-none touch-manipulation"
+                href=""
+                >Shop Now</a
+              >
+            </div>
+
+            <div
+              class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between"
+            >
+              <a href="#slide4" class="btn btn-circle" disabled>❮</a>
+              <a href="#slide2" class="btn btn-circle">❯</a>
+            </div>
+          </div>
+          <!-- slide 2 -->
+          <div
+            id="slide2"
+            class="carousel-item relative w-full rounded-[8px] bg-[linear-gradient(180deg,#121212_-14.42%,rgba(18,18,18,0)_100%),url('/images/banner2.png')] h-[70vh] bg-cover bg-center bg-no-repeat"
+          >
+            <div
+              class="flex flex-col justify-center items-center gap-8 max-w-2xl mx-auto"
+            >
+              <h1 class="font-lato text-6xl font-bold text-white text-center">
+                Exotic tastes at your doorstep
+              </h1>
+              <p class="font-lato text-xl font-medium text-white text-center">
+                We supply highly quality organic products
+              </p>
+              <a
+                class="btn font-lato border-none text-xl font-extrabold text-white bg-[var(--primary-color)] hover:bg-[var(--primary-hover)] active:bg-[var(--primary-hover)] active:scale-95 active:opacity-90 transition-all duration-300 outline-none select-none touch-manipulation"
+                href=""
+                >Shop Now</a
+              >
+            </div>
+            <div
+              class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between"
+            >
+              <a href="#slide1" class="btn btn-circle">❮</a>
+              <a href="#slide3" class="btn btn-circle">❯</a>
+            </div>
+          </div>
+          <!-- slide 3 -->
+          <div
+            id="slide3"
+            class="carousel-item relative w-full rounded-[8px] bg-[linear-gradient(180deg,#121212_-14.42%,rgba(18,18,18,0)_100%),url('/images/banner3.png')] h-[70vh] bg-cover bg-center bg-no-repeat"
+          >
+            <div
+              class="flex flex-col justify-center items-center gap-8 max-w-2xl mx-auto"
+            >
+              <h1 class="font-lato text-6xl font-bold text-white text-center">
+                Exotic tastes at your doorstep
+              </h1>
+              <p class="font-lato text-xl font-medium text-white text-center">
+                We supply highly quality organic products
+              </p>
+              <a
+                class="btn font-lato border-none text-xl font-extrabold text-white bg-[var(--primary-color)] hover:bg-[var(--primary-hover)] active:bg-[var(--primary-hover)] active:scale-95 active:opacity-90 transition-all duration-300 outline-none select-none touch-manipulation"
+                href=""
+                >Shop Now</a
+              >
+            </div>
+            <div
+              class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between"
+            >
+              <a href="#slide2" class="btn btn-circle">❮</a>
+              <a href="#slide4" class="btn btn-circle">❯</a>
+            </div>
+          </div>
+          <div
+            id="slide4"
+            class="carousel-item relative w-full rounded-[8px] bg-[linear-gradient(180deg,#121212_-14.42%,rgba(18,18,18,0)_100%),url('/images/banner3.png')] h-[70vh] bg-cover bg-center bg-no-repeat"
+          >
+            <div
+              class="flex flex-col justify-center items-center gap-8 max-w-2xl mx-auto"
+            >
+              <h1 class="font-lato text-6xl font-bold text-white text-center">
+                Exotic tastes at your doorstep
+              </h1>
+              <p class="font-lato text-xl font-medium text-white text-center">
+                We supply highly quality organic products
+              </p>
+              <a
+                class="btn font-lato border-none text-xl font-extrabold text-white bg-[var(--primary-color)] hover:bg-[var(--primary-hover)] active:bg-[var(--primary-hover)] active:scale-95 active:opacity-90 transition-all duration-300 outline-none select-none touch-manipulation"
+                href=""
+                >Shop Now</a
+              >
+            </div>
+            <div
+              class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between"
+            >
+              <a href="#slide3" class="btn btn-circle">❮</a>
+              <a href="#slide1" class="btn btn-circle" disabled>❯</a>
+            </div>
           </div>
         </div>
       </div>
