--- a/index.html
+++ b/index.html
@@ -108,12 +108,12 @@
         </div>
       </div>
       <!-- hero section -->
-      <div class="mt-14">
+      <div class="lg:mt-14">
         <div class="carousel w-full">
           <!-- slide 1 -->
           <div
             id="slide1"
-            class="carousel-item relative w-full rounded-[8px] bg-[linear-gradient(180deg,#121212_-14.42%,rgba(18,18,18,0)_100%),url('/images/banner1.png')] h-[70vh] bg-cover bg-center bg-no-repeat"
+            class="carousel-item relative w-full lg:rounded-[8px] bg-[linear-gradient(180deg,#121212_-14.42%,rgba(18,18,18,0)_100%),url('/images/banner1.png')] h-[70vh] bg-cover bg-center bg-no-repeat"
           >
             <div
               class="flex flex-col justify-center items-center gap-8 max-w-2xl mx-auto"
@@ -141,7 +141,7 @@
           <!-- slide 2 -->
           <div
             id="slide2"
-            class="carousel-item relative w-full rounded-[8px] bg-[linear-gradient(180deg,#121212_-14.42%,rgba(18,18,18,0)_100%),url('/images/banner2.png')] h-[70vh] bg-cover bg-center bg-no-repeat"
+            class="carousel-item relative w-full lg:rounded-[8px] bg-[linear-gradient(180deg,#121212_-14.42%,rgba(18,18,18,0)_100%),url('/images/banner2.png')] h-[70vh] bg-cover bg-center bg-no-repeat"
           >
             <div
               class="flex flex-col justify-center items-center gap-8 max-w-2xl mx-auto"
@@ -168,7 +168,7 @@
           <!-- slide 3 -->
           <div
             id="slide3"
-            class="carousel-item relative w-full rounded-[8px] bg-[linear-gradient(180deg,#121212_-14.42%,rgba(18,18,18,0)_100%),url('/images/banner3.png')] h-[70vh] bg-cover bg-center bg-no-repeat"
+            class="carousel-item relative w-full lg:rounded-[8px] bg-[linear-gradient(180deg,#121212_-14.42%,rgba(18,18,18,0)_100%),url('/images/banner3.png')] h-[70vh] bg-cover bg-center bg-no-repeat"
           >
             <div
               class="flex flex-col justify-center items-center gap-8 max-w-2xl mx-auto"
@@ -194,7 +194,7 @@
           </div>
           <div
             id="slide4"
-            class="carousel-item relative w-full rounded-[8px] bg-[linear-gradient(180deg,#121212_-14.42%,rgba(18,18,18,0)_100%),url('/images/banner3.png')] h-[70vh] bg-cover bg-center bg-no-repeat"
+            class="carousel-item relative w-full lg:rounded-[8px] bg-[linear-gradient(180deg,#121212_-14.42%,rgba(18,18,18,0)_100%),url('/images/banner3.png')] h-[70vh] bg-cover bg-center bg-no-repeat"
           >
             <div
               class="flex flex-col justify-center items-center gap-8 max-w-2xl mx-auto"
