position section added

--- a/index.html
+++ b/index.html
@@ -220,6 +220,41 @@
           </div>
         </div>
       </div>
+      <!-- position -->
+      <div
+        class="hidden lg:flex justify-around rounded-lg bg-[#FFF] shadow-[0_8px_60px_0_rgba(0,0,0,0.05)] max-w-5xl mx-auto position relative -top-20 md:p-6"
+      >
+        <div class="flex flex-col justify-center items-center">
+          <img src="images/fruit1.png" alt="" />
+          <p class="font-lato text-xl font-medium text-[rgba(18,18,18,0.8)]">
+            Red Globe
+          </p>
+        </div>
+        <div class="flex flex-col justify-center items-center">
+          <img src="images/fruit2.png" alt="" />
+          <p class="font-lato text-xl font-medium text-[rgba(18,18,18,0.8)]">
+            Orange
+          </p>
+        </div>
+        <div class="flex flex-col justify-center items-center">
+          <img src="images/fruit3.png" alt="" />
+          <p class="font-lato text-xl font-medium text-[rgba(18,18,18,0.8)]">
+            Mango
+          </p>
+        </div>
+        <div class="flex flex-col justify-center items-center">
+          <img src="images/fruit4.png" alt="" />
+          <p class="font-lato text-xl font-medium text-[rgba(18,18,18,0.8)]">
+            Strawberry
+          </p>
+        </div>
+        <div class="flex flex-col justify-center items-center">
+          <img src="images/fruit5.png" alt="" />
+          <p class="font-lato text-xl font-medium text-[rgba(18,18,18,0.8)]">
+            Pomegranate
+          </p>
+        </div>
+      </div>
     </header>
   </body>
 </html>
