deal section updated

--- a/index.html
+++ b/index.html
@@ -754,6 +754,13 @@
             </div>
           </div>
         </div>
+        <div class="text-center mt-12">
+          <a
+            class="btn font-lato border-none text-xl font-extrabold text-white bg-[var(--primary-color)] hover:bg-[var(--primary-hover)] active:bg-[var(--primary-hover)] active:scale-95 active:opacity-90 transition-all duration-300 outline-none select-none touch-manipulation"
+            href=""
+            >Shop All</a
+          >
+        </div>
       </section>
     </main>
   </body>
