--- a/index.html
+++ b/index.html
@@ -1961,5 +1961,165 @@
         </div>
       </section>
     </main>
+    <footer
+      class="footer footer-horizontal footer-center bg-[#121212] text-primary-content py-20"
+    >
+      <aside>
+        <!-- logo -->
+        <div class="flex justify-center items-center">
+          <a><img src="images/logo.png" alt="Logo" class="w-10 h-10" /></a>
+          <a
+            class="btn btn-ghost text-2xl lg:text-4xl font-lato lg:text-white font-bold"
+            >Fruit Burst</a
+          >
+        </div>
+        <!-- nav -->
+        <ul class="flex gap-8 my-8 flex-wrap justify-center">
+          <li><a href="">Home</a></li>
+          <li><a href="">About Us</a></li>
+          <li><a href="">Shop</a></li>
+          <li><a href="">All Fruits</a></li>
+          <li><a href="">Support</a></li>
+          <li><a href="">My Account</a></li>
+        </ul>
+      </aside>
+      <nav>
+        <div class="flex gap-10 flex-wrap justify-center">
+          <a>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="40"
+              height="40"
+              viewBox="0 0 40 40"
+              fill="none"
+            >
+              <path
+                d="M40 7.5975C38.5125 8.25 36.9275 8.6825 35.275 8.8925C36.975 7.8775 38.2725 6.2825 38.8825 4.36C37.2975 5.305 35.5475 5.9725 33.6825 6.345C32.1775 4.7425 30.0325 3.75 27.6925 3.75C23.1525 3.75 19.4975 7.435 19.4975 11.9525C19.4975 12.6025 19.5525 13.2275 19.6875 13.8225C12.87 13.49 6.8375 10.2225 2.785 5.245C2.0775 6.4725 1.6625 7.8775 1.6625 9.39C1.6625 12.23 3.125 14.7475 5.305 16.205C3.9875 16.18 2.695 15.7975 1.6 15.195C1.6 15.22 1.6 15.2525 1.6 15.285C1.6 19.27 4.4425 22.58 8.17 23.3425C7.5025 23.525 6.775 23.6125 6.02 23.6125C5.495 23.6125 4.965 23.5825 4.4675 23.4725C5.53 26.72 8.545 29.1075 12.13 29.185C9.34 31.3675 5.7975 32.6825 1.9625 32.6825C1.29 32.6825 0.645 32.6525 0 32.57C3.6325 34.9125 7.9375 36.25 12.58 36.25C27.67 36.25 35.92 23.75 35.92 12.915C35.92 12.5525 35.9075 12.2025 35.89 11.855C37.5175 10.7 38.885 9.2575 40 7.5975Z"
+                fill="white"
+              />
+            </svg>
+          </a>
+          <a>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="40"
+              height="40"
+              viewBox="0 0 40 40"
+              fill="none"
+            >
+              <g clip-path="url(#clip0_13_3502)">
+                <path
+                  d="M40 20C40 29.9828 32.6859 38.257 23.125 39.757V25.7813H27.7852L28.6719 20H23.125V16.2484C23.125 14.6664 23.9 13.125 26.3844 13.125H28.9062V8.20313C28.9062 8.20313 26.6172 7.8125 24.4289 7.8125C19.8609 7.8125 16.875 10.5813 16.875 15.5938V20H11.7969V25.7813H16.875V39.757C7.31406 38.257 0 29.9828 0 20C0 8.95469 8.95469 0 20 0C31.0453 0 40 8.95469 40 20Z"
+                  fill="white"
+                />
+                <path
+                  d="M27.7852 25.7812L28.6719 20H23.125V16.2484C23.125 14.6667 23.8998 13.125 26.3843 13.125H28.9062V8.20312C28.9062 8.20312 26.6175 7.8125 24.4293 7.8125C19.8609 7.8125 16.875 10.5813 16.875 15.5938V20H11.7969V25.7812H16.875V39.757C17.8933 39.9167 18.9369 40 20 40C21.0631 40 22.1067 39.9167 23.125 39.757V25.7812H27.7852Z"
+                  fill="#1877F2"
+                />
+              </g>
+              <defs>
+                <clipPath id="clip0_13_3502">
+                  <rect width="40" height="40" fill="white" />
+                </clipPath>
+              </defs>
+            </svg>
+          </a>
+          <a>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="58"
+              height="40"
+              viewBox="0 0 58 40"
+              fill="none"
+            >
+              <path
+                d="M55.9526 6.25899C55.294 3.81162 53.3644 1.88249 50.9175 1.22347C46.4468 0 28.5643 0 28.5643 0C28.5643 0 10.6821 0 6.21148 1.17683C3.81162 1.83542 1.83498 3.81206 1.17639 6.25899C0 10.7292 0 20 0 20C0 20 0 29.3174 1.17639 33.741C1.83542 36.1879 3.76455 38.1175 6.21192 38.7765C10.7292 40 28.5647 40 28.5647 40C28.5647 40 46.4468 40 50.9175 38.8232C53.3649 38.1646 55.294 36.235 55.953 33.7881C57.1294 29.3174 57.1294 20.0471 57.1294 20.0471C57.1294 20.0471 57.1765 10.7292 55.9526 6.25899Z"
+                fill="white"
+              />
+              <path
+                d="M22.8706 28.5648L37.7409 20.0001L22.8706 11.4354V28.5648Z"
+                fill="#FF0000"
+              />
+            </svg>
+          </a>
+          <a href="">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="40"
+              height="40"
+              viewBox="0 0 40 40"
+              fill="none"
+            >
+              <path
+                d="M35.992 36V35.9988H36V24.2628C36 18.5216 34.764 14.0988 28.052 14.0988C24.8252 14.0988 22.66 15.8696 21.776 17.548H21.6828V14.6348H15.3188V35.9988H21.9456V25.42C21.9456 22.6348 22.4736 19.9412 25.9228 19.9412C29.3216 19.9412 29.372 23.12 29.372 25.5984V36H35.992Z"
+                fill="white"
+              />
+              <path
+                d="M4.52783 14.636H11.1626V36H4.52783V14.636Z"
+                fill="white"
+              />
+              <path
+                d="M7.8428 4C5.7212 4 4 5.7212 4 7.8428C4 9.9644 5.7212 11.7216 7.8428 11.7216C9.9644 11.7216 11.6856 9.9644 11.6856 7.8428C11.684 5.7212 9.9628 4 7.8428 4Z"
+                fill="white"
+              />
+            </svg>
+          </a>
+          <a href="">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="40"
+              height="40"
+              viewBox="0 0 40 40"
+              fill="none"
+            >
+              <g clip-path="url(#clip0_13_3516)">
+                <path
+                  d="M39.9609 11.7601C39.8672 9.63476 39.5235 8.17359 39.0312 6.90748C38.5233 5.56353 37.7419 4.36029 36.7181 3.36003C35.7178 2.34421 34.5067 1.55487 33.1783 1.05489C31.9048 0.562549 30.4513 0.218854 28.326 0.125146C26.1847 0.0235031 25.505 0 20.0742 0C14.6435 0 13.9637 0.0235031 11.8304 0.11721C9.70507 0.210918 8.24391 0.554918 6.9781 1.04696C5.63384 1.55487 4.4306 2.33627 3.43034 3.36003C2.41452 4.36029 1.62549 5.57146 1.12521 6.89985C0.632861 8.17359 0.289166 9.62682 0.195459 11.7522C0.0938156 13.8934 0.0703125 14.5732 0.0703125 20.0039C0.0703125 25.4347 0.0938156 26.1144 0.187523 28.2477C0.28123 30.3731 0.62523 31.8342 1.11758 33.1003C1.62549 34.4443 2.41452 35.6475 3.43034 36.6478C4.4306 37.6636 5.64177 38.4529 6.97016 38.9529C8.24391 39.4453 9.69713 39.789 11.8228 39.8827C13.9558 39.9767 14.6358 39.9999 20.0666 39.9999C25.4973 39.9999 26.1771 39.9767 28.3104 39.8827C30.4357 39.789 31.8969 39.4453 33.1627 38.9529C35.8509 37.9136 37.9763 35.7882 39.0156 33.1003C39.5076 31.8266 39.8516 30.3731 39.9454 28.2477C40.0391 26.1144 40.0626 25.4347 40.0626 20.0039C40.0626 14.5732 40.0546 13.8934 39.9609 11.7601ZM36.3588 28.0914C36.2728 30.0449 35.9446 31.0998 35.6711 31.8031C34.999 33.5457 33.616 34.9287 31.8734 35.6008C31.1701 35.8743 30.1076 36.2024 28.1617 36.2882C26.052 36.3822 25.4192 36.4054 20.0822 36.4054C14.7451 36.4054 14.1044 36.3822 12.0023 36.2882C10.0488 36.2024 8.99387 35.8743 8.29061 35.6008C7.42343 35.2803 6.63409 34.7724 5.99341 34.1082C5.32921 33.4596 4.8213 32.6782 4.5008 31.811C4.22731 31.1078 3.89919 30.0449 3.81341 28.0994C3.7194 25.9896 3.6962 25.3565 3.6962 20.0195C3.6962 14.6824 3.7194 14.0417 3.81341 11.9399C3.89919 9.98639 4.22731 8.93149 4.5008 8.22823C4.8213 7.36075 5.32921 6.57172 6.00134 5.93072C6.64966 5.26653 7.43106 4.75862 8.29854 4.43843C9.00181 4.16494 10.0646 3.83681 12.0102 3.75073C14.12 3.65703 14.7531 3.63352 20.0898 3.63352C25.4348 3.63352 26.0675 3.65703 28.1697 3.75073C30.1232 3.83681 31.1781 4.16494 31.8813 4.43843C32.7485 4.75862 33.5378 5.26653 34.1785 5.93072C34.8427 6.57935 35.3506 7.36075 35.6711 8.22823C35.9446 8.93149 36.2728 9.99402 36.3588 11.9399C36.4525 14.0497 36.476 14.6824 36.476 20.0195C36.476 25.3565 36.4525 25.9816 36.3588 28.0914Z"
+                  fill="white"
+                />
+                <path
+                  d="M20.0743 9.72845C14.4015 9.72845 9.79883 14.3308 9.79883 20.0039C9.79883 25.677 14.4015 30.2793 20.0743 30.2793C25.7474 30.2793 30.3497 25.677 30.3497 20.0039C30.3497 14.3308 25.7474 9.72845 20.0743 9.72845ZM20.0743 26.6693C16.394 26.6693 13.4088 23.6844 13.4088 20.0039C13.4088 16.3234 16.394 13.3385 20.0743 13.3385C23.7548 13.3385 26.7397 16.3234 26.7397 20.0039C26.7397 23.6844 23.7548 26.6693 20.0743 26.6693Z"
+                  fill="white"
+                />
+                <path
+                  d="M33.1549 9.32218C33.1549 10.6469 32.0808 11.721 30.7558 11.721C29.4311 11.721 28.3569 10.6469 28.3569 9.32218C28.3569 7.99716 29.4311 6.92334 30.7558 6.92334C32.0808 6.92334 33.1549 7.99716 33.1549 9.32218Z"
+                  fill="white"
+                />
+              </g>
+              <defs>
+                <clipPath id="clip0_13_3516">
+                  <rect width="40" height="40" fill="white" />
+                </clipPath>
+              </defs>
+            </svg>
+          </a>
+          <a href="">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="40"
+              height="40"
+              viewBox="0 0 40 40"
+              fill="none"
+            >
+              <g clip-path="url(#clip0_13_3521)">
+                <path
+                  d="M27.4982 0C25.3657 0.147499 22.8732 1.51249 21.4207 3.28998C20.0957 4.90247 19.0057 7.29746 19.4307 9.62494C21.7607 9.69744 24.1682 8.29995 25.5632 6.49246C26.8682 4.80997 27.8557 2.42999 27.4982 0Z"
+                  fill="white"
+                />
+                <path
+                  d="M35.9259 13.4199C33.8784 10.8524 31.0009 9.36243 28.2834 9.36243C24.6959 9.36243 23.1784 11.0799 20.686 11.0799C18.116 11.0799 16.1635 9.36743 13.061 9.36743C10.0135 9.36743 6.76853 11.2299 4.71104 14.4149C1.81856 18.8999 2.31356 27.3323 7.00103 34.5148C8.67852 37.0848 10.9185 39.9747 13.8485 39.9997C16.456 40.0247 17.191 38.3273 20.7235 38.3098C24.2559 38.2898 24.9259 40.0222 27.5284 39.9947C30.4609 39.9722 32.8234 36.7698 34.5009 34.1998C35.7034 32.3573 36.1509 31.4298 37.0834 29.3498C30.3009 26.7673 29.2134 17.1224 35.9259 13.4199Z"
+                  fill="white"
+                />
+              </g>
+              <defs>
+                <clipPath id="clip0_13_3521">
+                  <rect width="40" height="40" fill="white" />
+                </clipPath>
+              </defs>
+            </svg>
+          </a>
+        </div>
+      </nav>
+    </footer>
   </body>
 </html>
