footer anchor tag updated

--- a/index.html
+++ b/index.html
@@ -1975,12 +1975,48 @@
         </div>
         <!-- nav -->
         <ul class="flex gap-8 my-8 flex-wrap justify-center">
-          <li><a href="">Home</a></li>
-          <li><a href="">About Us</a></li>
-          <li><a href="">Shop</a></li>
-          <li><a href="">All Fruits</a></li>
-          <li><a href="">Support</a></li>
-          <li><a href="">My Account</a></li>
+          <li>
+            <a
+              class="inline-block transition-transform duration-300 ease-in-out hover:scale-105 active:scale-105 select-none touch-none"
+              href=""
+              >Home</a
+            >
+          </li>
+          <li>
+            <a
+              class="inline-block transition-transform duration-300 ease-in-out hover:scale-105 active:scale-105 select-none touch-none"
+              href=""
+              >About Us</a
+            >
+          </li>
+          <li>
+            <a
+              class="inline-block transition-transform duration-300 ease-in-out hover:scale-105 active:scale-105 select-none touch-none"
+              href=""
+              >Shop</a
+            >
+          </li>
+          <li>
+            <a
+              class="inline-block transition-transform duration-300 ease-in-out hover:scale-105 active:scale-105 select-none touch-none"
+              href=""
+              >All Fruits</a
+            >
+          </li>
+          <li>
+            <a
+              class="inline-block transition-transform duration-300 ease-in-out hover:scale-105 active:scale-105 select-none touch-none"
+              href=""
+              >Support</a
+            >
+          </li>
+          <li>
+            <a
+              class="inline-block transition-transform duration-300 ease-in-out hover:scale-105 active:scale-105 select-none touch-none"
+              href=""
+              >My Account</a
+            >
+          </li>
         </ul>
       </aside>
       <nav>
