--- a/index.html
+++ b/index.html
@@ -1205,7 +1205,7 @@
               />
             </figure>
             <div class="card-body items-center text-center">
-              <h2 class="card-title font-lato text-white">Awlad Hossain</h2>
+              <h2 class="card-title font-lato text-white">Fahim Faysal</h2>
               <p class="font-lato text-white text-sm font-medium">
                 Fruits Expert
               </p>
@@ -1407,7 +1407,7 @@
               />
             </figure>
             <div class="card-body items-center text-center">
-              <h2 class="card-title font-lato text-white">Rokib Hossain</h2>
+              <h2 class="card-title font-lato text-white">Faysal Nirjhar</h2>
               <p class="font-lato text-white text-sm font-medium">
                 Fruits Expert
               </p>
